--- a/src/App.css
+++ b/src/App.css
@@ -14,7 +14,7 @@
 }
 
 .App-header {
-  background-color: #282c34;
+  background-color: #6a98f5;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
@@ -34,5 +34,28 @@
   }
   to {
     transform: rotate(360deg);
+  }
+}
+
+:root {
+  --shadow:0 25px 50px -12px rgba(0, 0, 0, 0.25);
+  --ring-offset-shadow:0 0 #0000;
+  --ring-shadow:0 0 #0000;
+}
+
+.card_open {
+  animation-duration: 2s;
+  animation-name: card_open;
+}
+
+@keyframes card_open {
+  from {
+      height: 1%;
+      box-shadow: var(--shadow);
+  }
+
+  to {
+      height: 100%;
+      box-shadow: var(--ring-offset-shadow,0 0 #0000),var(--ring-shadow,0 0 #0000),var(--shadow);
   }
 }
